--- a/.github/workflows/github-actions-htmlextra-report.yml
+++ b/.github/workflows/github-actions-htmlextra-report.yml
@@ -31,7 +31,7 @@ jobs:
         
    # Run the POSTMAN collection
       - name: Run API Tests
-        run: newman run "UAT_GoAPI.postman_collection.json" -e "UAT.postman_environment.json" -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
+        run: newman run UAT_GoAPI.postman_collection.json -e UAT.postman_environment.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
 
     # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
