--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -29,6 +29,7 @@ jobs:
         
    # Run the POSTMAN collection
       - name: Run API Tests
+        if: always()
         run: newman run Sample_collection_with_FAILURES.json -e UAT.postman_environment.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
 
     # Upload the contents of Test Results directory to workspace
