--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           npm install -g newman
           npm install -g newman-reporter-htmlextra
+          npm install newman-reporter-qase
           
     # Make directory to upload the test results
       - name: Make Directory for results
