--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -31,8 +31,15 @@ jobs:
    # Run the POSTMAN collection
       - name: Run API Tests
         if: always()
-        run: newman run Sample_collection_with_FAILURES.json -e UAT.postman_environment.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
-
+        run: newman run Sample_collection_with_FAILURES.json -e UAT.postman_environment.json 
+          -r qase 
+          --reporter-qase-logging 
+          --reporter-qase-projectCode EDUC
+          --reporter-qase-apiToken 347d3bff44ab41aca412421ecf1d41a33ad29919
+          --reporter-qase-runId 34
+          --reporter-qase-basePath https://api.qase.io/v1
+          --reporter-qase-runName "API test Execution"
+          --reporter-qase-runDescription "Check API consistency"
     # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
         if: always()
