--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -36,10 +36,10 @@ jobs:
    # Run the POSTMAN collection
       - name: Run API Tests
         if: always()
-        run: newman run "Sample_collection_with_FAILURES.json" -e "UAT.postman_environment.json"
-          -r "qase" \
-          --reporter-qase-projectCode "EDUC" \
-          --reporter-qase-apiToken "347d3bff44ab41aca412421ecf1d41a33ad29919" \
+        run: newman run Sample_collection_with_FAILURES.json -e UAT.postman_environment.json
+          -r qase \
+          --reporter-qase-projectCode EDUC \
+          --reporter-qase-apiToken 347d3bff44ab41aca412421ecf1d41a33ad29919 \
           --reporter-qase-runId 34 \
           --reporter-qase-basePath https://api.qase.io/v1 \
           --reporter-qase-runName "API test Execution" \
