--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -35,14 +35,14 @@ jobs:
         
    # Run the POSTMAN collection
       - name: Run API Tests
-        run: QASE_RUN_ID=26
+        run:
           newman run GlobalGO.collection.json -e GlobalGO_QA.environment.json
-          -r qase \
-          --reporter-qase-logging \
-          --reporter-qase-projectCode EDUC \
-          --reporter-qase-apiToken 347d3bff44ab41aca412421ecf1d41a33ad29919 \
-          --reporter-qase-runId 26 \
-          --reporter-qase-basePath https://api.qase.io/v1 \
-          --reporter-qase-runName "API test Execution" \
-          --reporter-qase-runDescription "Check API consistency" \ 
+          -r qase\
+          --reporter-qase-logging\
+          --reporter-qase-projectCode EDUC\
+          --reporter-qase-apiToken 347d3bff44ab41aca412421ecf1d41a33ad29919\
+          --reporter-qase-runId 26\
+          --reporter-qase-basePath https://api.qase.io/v1\
+          --reporter-qase-runName "API test Execution"\
+          --reporter-qase-runDescription "Check API consistency"\ 
           -x
