--- a/PEAS.collectionPoC2.json
+++ b/PEAS.collectionPoC2.json
@@ -15,7 +15,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"//qase: 1 \r",
+									"//qase: 1",
 									"\r",
 									"pm.test('Verify that a client of web service with valid origin url when generating a authtoken is able to get a response code 200', function () {\r",
 									"    pm.response.to.be.info\r",
@@ -64,7 +64,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"//qase: 2 \r",
+									"//qase: 2",
 									"pm.test('Verify that a client of web service with valid origin url when generating a authtoken is able to get a response code 401', function () {\r",
 									"    pm.response.to.have.status(401);\r",
 									"})\r",
@@ -112,7 +112,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"//qase: 3 \r",
+									"//qase: 3",
 									"\r",
 									"pm.test('Verify that a client of web service with valid origin url when generating a authtoken is able to get a response code 401', function () {\r",
 									"    pm.response.to.have.status(401);\r",
@@ -159,7 +159,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"//qase: 4 \r",
+									"//qase: 4",
 									"\r",
 									"pm.test(\"Verify that a client of web service with valid refresh token when refreshing authorization is able to get a response code 200\", function () {\r",
 									"    pm.response.to.have.status(200);\r",
@@ -207,7 +207,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"//qase: 5 \r",
+									"//qase: 5",
 									"\r",
 									"\r",
 									"pm.test(\"Verify that a client of web service with invalid refresh token when refreshing authorization is able to get a response code 401\", function () {\r",
