--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -42,7 +42,7 @@ jobs:
       - name: check run type
         with:
           variables: |
-          PROJ: "${{ github.event.inputs.runtype }}" == "test" ? "PCG" : "APIGO"
+          PROJ: "${{ github.event.inputs.runtype }} == test ? "PCG" : "APIGO"
 
    # Run the POSTMAN collection
       - name: Run API Tests
