--- a/.github/workflows/ELEVATEreport.yml
+++ b/.github/workflows/ELEVATEreport.yml
@@ -39,7 +39,8 @@ jobs:
         run: |
           npm install -g newman-reporter-qase
      
-      - uses: marcdomain/set-variables@v1
+      - name: check run type
+        uses: marcdomain/set-variables@v1.1
         with:
           variables: |
             PROJ: "${{ github.event.inputs.runtype }}" == "test" ? "PCG" : "APIGO"
