--- a/.github/workflows/GOAPI.yml
+++ b/.github/workflows/GOAPI.yml
@@ -47,8 +47,9 @@ jobs:
 
    # Run the POSTMAN collection
       - name: Run API Tests
-          newman run PEAS.collectionPoC.json -e PEAS_QA.environment.json
-          -r qase --reporter-qase-logging 
+          newman run "go-backend_cicd_qa.postman_collection.json" -e "go-backend_qa.postman_environment.json"
+          -r qase 
+          --reporter-qase-logging 
           --reporter-qase-projectCode ${{ env.PROJ }}
           --reporter-qase-apiToken 745a19ec6abd2f5412ad144d2d4547a313a602c4 
           --reporter-qase-runName "${{github.event.inputs.logLevel}} - ${{github.event.inputs.tags}}
