--- a/.github/workflows/GOAPI.yml
+++ b/.github/workflows/GOAPI.yml
@@ -1,6 +1,4 @@
-# This workflow will help you to produce an HTML extra test results report
-
-name: Newman Run
+name: GO_BACKEND_QA_API
 on:
   workflow_dispatch:
     inputs:
@@ -10,6 +8,7 @@ on:
         default: 'Sprint 1'
       tags:
         description: 'Test run name'
+        required: true
       runtype:
         type: choice
         description: 'Run type'
@@ -18,40 +17,55 @@ on:
         - test
         - regression
 jobs:
-  global-go-api-sample:
+  global-go-api:
     runs-on: ubuntu-latest
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: check run type
+        uses: marcdomain/set-variables@v1
+        with:
+          variables: |
+            PROJ: "${{ github.event.inputs.runtype }}" == "test" ? "PCG" : "APIGO"
       
    # INstall Node on the runner
       - name: Install Node
         uses: actions/setup-node@v2
         with: 
           node-version: '16.x'
+
     
-    # Install the newman
+    # Install the newman command line utility and also install the html extra reporter
       - name: Install newman
         run: |
           npm install -g newman
-
+      - name: Install html extra
+        run: |
+          npm install -g newman-reporter-htmlextra
+          
       - name: Install qase reporter
         run: |
           npm install -g newman-reporter-qase
-     
-      - name: check run type
-        uses: marcdomain/set-variables@v1
-        with:
-          variables: |
-            PROJ: "${{ github.event.inputs.runtype }}" == "test" ? "PCG" : "APIGO"
-
+          
+    # Make directory to upload the test results
+      - name: Make Directory for results
+        run: mkdir -p testResults
+        
    # Run the POSTMAN collection
       - name: Run API Tests
-          newman run "go-backend_cicd_qa.postman_collection.json" -e "go-backend_qa.postman_environment.json"
-          -r qase 
+        run: newman run "go-backend_cicd_qa.postman_collection.json" -e "go-backend_qa.postman_environment.json" 
+          -r cli,htmlextra,qase 
+          --reporter-htmlextra-export testResults/htmlreport.html 
           --reporter-qase-logging 
-          --reporter-qase-projectCode ${{ env.PROJ }}
-          --reporter-qase-apiToken 745a19ec6abd2f5412ad144d2d4547a313a602c4 
-          --reporter-qase-runName "${{github.event.inputs.logLevel}} - ${{github.event.inputs.tags}}
-
-
+          --reporter-qase-projectCode ${{ env.PROJ }} 
+          --reporter-qase-apiToken 745a19ec6abd2f5412ad144d2d4547a313a602c4
+          --reporter-qase-runName "${{github.event.inputs.logLevel}} - ${{github.event.inputs.tags}}"
+        
+    # Upload the contents of Test Results directory to workspace
+      - name: Output the run Details
+        if: always()
+        uses: actions/upload-artifact@v2
+        with: 
+          name: "GLOBAL_GO_${{github.event.inputs.tags}}_reports"
+          path: testResults
